# decentralized-issuer

./: .gitignore  LICENSE  README.md
eval/: README.md  c-vs-d.py  container_manager.py  key-gen-test.py  load-test.py  performance-test.py  requirement.txt
eval/c-vs-d-test-results/: test_results_centralized.csv  test_results_decentralized.csv
eval/key-gen-test-results/: test_results_key_gen.csv
eval/load-test-results/: load_test_one_round.csv  load_test_two_round.csv
eval/performance-test-results/: test_results_one_round.csv  test_results_two_round.csv
issuer/: .env  Cargo.toml  Dockerfile  deploy_docker.sh
issuer/certs/: demo_private.pem  demo_public.pem  group_key.pem
issuer/metadata/: issuer_config.json
issuer/src/: helpers.rs  main.rs
signing_nodes/: .env  Cargo.toml  Dockerfile  alter_kafka_partitions.sh  clean_up.sh  deploy.sh  deploy_docker.sh  docker-compose-benchmark.yml  docker-compose-dev.yml  docker-compose-kcluster.yml  setup-kafka.sh  start_nginx.sh  start_nodes.sh  stop_docker.sh  stop_nodes.sh
signing_nodes/keys/: 10_key.txt  1_key.txt  2_key.txt  3_key.txt  4_key.txt  5_key.txt  6_key.txt  7_key.txt  8_key.txt  9_key.txt  group_key.pem
signing_nodes/nginx/: nginx.conf  nginx.conf_1n
signing_nodes/src/: broker.rs  constants.rs  main.rs  messages.rs  node.rs  node_state.rs  utils.rs
signing_nodes/src/frost_lib/: helpers.rs  keygen.rs  sign.rs
