[package]
name = "issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.7", features = ["std"] }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
sha2 = "0.10"
chrono = "0.4"
jsonwebtoken = "7.2.0"
hex = "0.4.3"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
