[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.13.0"
curve25519-dalek = {version = "3.2", features=["serde"] }
rand = { version = "0.7", features = ["std"] }
sha2 = "0.9"
reqwest = { version = "0.12.7", features = ["json"] }
rdkafka = { version = "0.28", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dashmap = "5.1.0"
uuid = { version = "1", features = ["v4"] }
actix-rt = "2"
env_logger = "0.9"
log = "0.4"
jsonwebtoken = "8.1"
p256 = { version = "0.10", features = ["ecdsa", "pkcs8","pem"] }
chrono = "0.4.38"
warp = "0.3.7"
scc = "2.2.0"
hex = "0.4.3"
clap = { version = "4.5.20", features = ["derive"] }

